--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "express": "3.x",
-    "socket.io": "0.9.x"
+    "socket.io": "0.9.x",
+    "volo-ghdeploy": "0.0.x"
   },
   "subdomain": "hayabusa.factory",
   "scripts": {
