--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "3.x",
-    "socket.io": "0.9.x",
-    "volo-ghdeploy": "0.0.x"
+    "socket.io": "0.9.x"
   },
   "subdomain": "hayabusa.factory",
   "scripts": {
