--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "factory",
-  "version": "0.0.1",
+  "version": "0.0.1-1",
   "private": true,
   "dependencies": {
     "express": "3.x",
