--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "express": "3.x",
-    "socket.io": "0.9.x"
+    "socket.io": "0.9.x",
+    "mongodb": "1.2.x",
+    "redis": "0.8.x"
   },
   "subdomain": "hayabusa.factory",
   "scripts": {
